fix topic titles being off-center

--- a/app/assets/stylesheets/common/foundation/helpers.scss
+++ b/app/assets/stylesheets/common/foundation/helpers.scss
@@ -62,6 +62,10 @@
   }
 }
 
+td.clearfix {
+  display: table-cell !important;
+}
+
 // Overflow
 // --------------------------------------------------
 
